--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "interactjs": "^1.3.3",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
     "tippy.js": "^2.2.3",
     "url-loader": "^0.6.2",
