--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "itdog-banner",
   "version": "1.0.0",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,7 +26,6 @@
     "install": "^0.10.4",
     "interactjs": "^1.3.3",
     "jquery": "^3.3.1",
-    "jquery-ui": "^1.12.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
